--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2177,7 +2177,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Đệ Tử",
+        "vi":"Đầy Tớ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9929,7 +9929,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nói chuyện với Zack ở Trại Nổi Loạn để nhận nhiệm vụ hộ tống hàng ngày.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9948,7 +9948,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nói chuyện với Zack ở Trại Nổi Loạn để nhận nhiệm vụ hộ tống hàng ngày.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9967,7 +9967,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nói chuyện với Jerry ở Cửa Khẩu Lặng Thinh để nhận nhiệm vụ hệ thống hàng ngày.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10765,7 +10765,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Đôi Mắt Kinh Hoàng",
+        "vi":"Con Mắt Kinh Hoàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10860,7 +10860,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Đôi Mắt Kinh Hãi",
+        "vi":"Con Mắt Kinh Hãi",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11050,7 +11050,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Con Mắt Tuyệt Vọng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11069,7 +11069,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đôi Tay Tuyệt Vọng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11088,7 +11088,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cái Đầu Tuyệt Vọng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11107,7 +11107,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tinh Linh Tuyệt Vọng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11126,7 +11126,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tinh Linh Tuyệt Vọng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11145,7 +11145,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tái Sinh Hy Vọng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11164,7 +11164,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Lời Nhắn Hy Vọng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11183,7 +11183,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đại Chiến Hy Vọng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11202,7 +11202,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Kẻ Thống Trị Hy Vọng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11221,7 +11221,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ánh Sáng Hy Vọng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11240,7 +11240,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Con Mắt Thần Chết",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11259,7 +11259,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đôi Tay Thần Chết",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11278,7 +11278,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cái Đầu Thần Chết",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11297,7 +11297,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tinh Linh Thần Chết",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11316,7 +11316,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Linh Hồn Thần Chết",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11335,7 +11335,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Học Giả Tân Sinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11354,7 +11354,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Sứ Giả Tân Sinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11373,7 +11373,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đấu Sĩ Tân Sinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11392,7 +11392,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chúa Tể Tân Sinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11411,7 +11411,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ánh Sáng Tân Sinh",
         "ar":"",
         "it":"",
         "pl":"",
