--- a/Translation/event.json
+++ b/Translation/event.json
@@ -486,7 +486,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"<b>Bom Keo: </b>Cầm chân mục tiêu trong {0} giây. Ngăn cản mọi hành động. Cầm chân không thể bị phá bỏ.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -505,7 +505,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"<b>Bom TNT: </b>Gây sát thương trực tiếp bằng với {0}% máu tối đa của người chơi",
         "ar":"",
         "it":"",
         "pl":"",
@@ -524,7 +524,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"<b>Bom Gai: </b>Gây sát thương theo thời gian bằng với {0}% máu tối đa của người chơi mỗi {1} giây",
         "ar":"",
         "it":"",
         "pl":"",
@@ -543,7 +543,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bom sẽ nổ tại vị trí mà người chơi ném vào, và ảnh hưởng tất cả người chơi kể cả bạn.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -695,7 +695,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Trong sự kiện này, bạn sẽ thành lập tổ đội với tối đa {0} người. Tổ đội sẽ được cân bằng dựa trên trang bị hiện có, chiến hồn và chúc phúc (cả trên nhân vật và đầy tớ). Càng nhiều chuỗi thắng càng tăng điểm số.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -714,7 +714,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mục tiêu của sự kiện này là chiếm lá cờ sang màu của đội bạn. Tộng cộng có 5 lá cờ trên sân. Mỗi lá cờ được chiếm sẽ tăng 10 điểm mỗi {0} giây cho đội đó.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -733,7 +733,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cảnh báo, ngay khi bạn vào bản đồ chính, PvP sẽ được kích hoạt. Bạn sẽ phải tìm cách sinh tồn trong khi chiếm cờ, hoặc ngăn cản đội khác. Nhận bất kỳ một đòn tấn công trực diện sẽ ngắt tiến độ chiếm cờ.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -752,7 +752,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đội đầu tiên đạt 2000 điểm sẽ dành chiến thắng. Đội thua cuộc sẽ chỉ nhận được phân nửa số mã kim so với đội chiến thắng.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -771,7 +771,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cảnh báo: sảnh cuối sẽ được dựng trên số lượng người chơi còn lại và có thể sẽ có lượng người chơi không được cân bằng hoàn toàn.",
         "ar":"",
         "it":"",
         "pl":"",
