--- a/Translation/item.json
+++ b/Translation/item.json
@@ -8325,7 +8325,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"[Linh Trứng] [Bát Triệu Hồi] Abatton",
+		"vi":"[Linh Trứng] [Bạch Tuộc Triệu Hồi] Abatton",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -8895,7 +8895,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Chỉ Huy Vệ Binh Thành Phố Vinh Quang",
+        "vi":"[Linh Trứng] Chỉ Huy Vệ Binh Vầng Quang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11403,7 +11403,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"[Bát Triệu Hồi] Abatton",
+		"vi":"[Bạch Tuộc Triệu Hồi] Abatton",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -11973,7 +11973,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Chỉ Huy Vệ Binh Thành Phố Vinh Quang",
+        "vi":"Chỉ Huy Vệ Binh Vầng Quang",
         "ar":"",
         "it":"",
         "pl":"",
