--- a/Translation/map.json
+++ b/Translation/map.json
@@ -2158,7 +2158,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Băng Tinh Thánh Địa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2215,7 +2215,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thị Trấn Vầng Quang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2253,7 +2253,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tòa Nhà Băng Giá Tầng 1",
+        "vi":"Tòa Nhà Băng Giá - Tầng 1",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2272,7 +2272,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tòa Nhà Băng Giá Tầng 2",
+        "vi":"Tòa Nhà Băng Giá - Tầng 2",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2291,7 +2291,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tòa Nhà Băng Giá Tầng 3",
+        "vi":"Tòa Nhà Băng Giá - Tầng 3",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2310,7 +2310,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tòa Nhà Băng Giá Tầng 4",
+        "vi":"Tòa Nhà Băng Giá - Tầng 4",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2329,7 +2329,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tòa Nhà Băng Giá Tầng 5",
+        "vi":"Tòa Nhà Băng Giá - Tầng 5",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2500,7 +2500,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thông Linh Liên Địa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2519,7 +2519,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thôn Phù Thủy",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2595,7 +2595,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhà Máy Cơ Khí",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2614,7 +2614,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phòng Lắp Ráp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2633,7 +2633,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Trung Tâm Nhà Máy",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2652,7 +2652,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhà Máy Linh Kiện",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2671,7 +2671,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhà Máy - Điện Tinh Anh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2690,7 +2690,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhà Máy - Thâm Điện Tinh Anh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2709,7 +2709,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhà Máy - Khu Đi Săn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2728,7 +2728,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhà Máy Xử Lý Chất Thải",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2747,7 +2747,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhà Kho",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2766,7 +2766,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thảo Nguyên Của Tiên",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2785,7 +2785,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tầng Mây Bằng Phẳng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2804,7 +2804,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đường Sắt",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2823,7 +2823,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Trại Nổi Loạn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2842,7 +2842,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cống Nước",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2861,7 +2861,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cống Nước - Tầng 1",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2880,7 +2880,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cống Nước - Tầng 2",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2899,7 +2899,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cống Nước - Tầng 3",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2918,7 +2918,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cống Nước - Tầng 4",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2937,7 +2937,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cống Nước - Điện Tinh Anh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2956,7 +2956,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cống Nước - Thâm Điện Tinh Anh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2975,7 +2975,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cống Nước - Khu Đi Săn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2994,7 +2994,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tháp Chọc Trời",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3013,7 +3013,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nghĩa Trang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3032,7 +3032,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Sa Mạc Lãng Quên",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3051,7 +3051,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tháp Thịnh Nộ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3070,7 +3070,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tháp Yêu Nghiệt",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3089,7 +3089,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tháp Sinh Mệnh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3108,7 +3108,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tháp Ma Pháp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3127,7 +3127,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Kênh Đào Halankem",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3146,7 +3146,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thị Trấn Halankem",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3165,7 +3165,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cao Nguyên Thụ Diệp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3184,7 +3184,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bờ Biển Sương Mù",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3203,7 +3203,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Dìa Ngoài Tháp Thịnh Nộ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3222,7 +3222,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Dìa Ngoài Tháp Yêu Nghiệt",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3241,7 +3241,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Dìa Ngoài Tháp Sinh Lực",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3260,7 +3260,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Dìa Ngoài Tháp Ma Pháp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3279,7 +3279,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cảng Lặng Thinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3298,7 +3298,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Sa Mạc Trắng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3355,7 +3355,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hải Yêu Chiến Khu",
         "ar":"",
         "it":"",
         "pl":"",
