--- a/Translation/item.json
+++ b/Translation/item.json
@@ -12151,6 +12151,82 @@
         "th": "",
         "id": ""
     },
+    "item.4810.name": {
+        "en": "Queen Nagar",
+        "fr": "Reine Nagar",
+        "es": "Reina Nagar",
+        "zh-cn": "纳加尔女王",
+        "zh-tw": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "Königin Nagar",
+        "jp": "",
+        "pt": "",
+        "vi": "Nữ Hoàng Hải Yêu",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "item.4811.name": {
+        "en": "Subject Seurat",
+        "fr": "Sujet Seurat",
+        "es": "Súbdito Seurat",
+        "zh-cn": "实验体修拉",
+        "zh-tw": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "Untertan Seurat",
+        "jp": "",
+        "pt": "",
+        "vi": "Vật Thí Nghiệm Seurat",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "item.4812.name": {
+        "en": "Earth Dragon Anglas",
+        "fr": "Dragon de Terre Anglas",
+        "es": "Dragón de la Tierra Anglas",
+        "zh-cn": "土龙安格拉斯",
+        "zh-tw": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "Erddrache Anglas",
+        "jp": "",
+        "pt": "",
+        "vi": "Địa Long Anglas",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "item.4813.name": {
+        "en": "Wheatley",
+        "fr": "Wheatley",
+        "es": "",
+        "zh-cn": "",
+        "zh-tw": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
     "item.4901.name":{
         "en":"Spirit Stat Book [HP]",
         "fr":"Livre d'Esprit [PV]",
