--- a/Translation/item.json
+++ b/Translation/item.json
@@ -9073,6 +9073,82 @@
         "th": "",
         "id": ""
     },
+    "item.4810.name": {
+        "en": "[Spirit Egg] Queen Nagar",
+        "fr": "[Oeuf d'esprit] Reine Nagar",
+        "es": "",
+        "zh-cn": "[精灵蛋] 纳加尔女王",
+        "zh-tw": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "[Linh Trứng] Nữ Hoàng Hải Yêu",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "item.4811.name": {
+        "en": "[Spirit Egg] Subject Seurat",
+        "fr": "[Oeuf d'esprit] Sujet Seurat",
+        "es": "",
+        "zh-cn": "[精灵蛋] 实验体修拉",
+        "zh-tw": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "[Linh Trứng] Vật Thí Nghiệm Seurat",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "item.4812.name": {
+        "en": "[Spirit Egg] Earth Dragon Anglas",
+        "fr": "[Oeuf d'esprit] Dragon de Terre Anglas",
+        "es": "",
+        "zh-cn": "[精灵蛋] 土龙安格拉斯",
+        "zh-tw": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "[Linh Trứng] Địa Long Anglas",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "item.4813.name": {
+        "en": "[Spirit Egg] Wheatley",
+        "fr": "[Oeuf d'esprit] Wheatley",
+        "es": "",
+        "zh-cn": "",
+        "zh-tw": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
     "item.4000.name":{
         "en":"Pudding Slime",
         "fr":"Slime Pudding",
